bpo-28261: Fixed err msgs where PyArg_ParseTuple is used to parse normal tuples. (#3119)